@@ -11,7 +11,7 @@ lvcreate \- create a logical volume in an existing volume group
 {\-l/\-\-extents LogicalExtentsNumber[%{VG|FREE}] |
  \-L/\-\-size LogicalVolumeSize[kKmMgGtT]}
 [\-M/\-\-persistent y/n] [\-\-minor minor]
-[\-m/\-\-mirrors Mirrors [\-\-nosync] [\-\-corelog]
+[\-m/\-\-mirrors Mirrors [\-\-nosync] [\-\-log {disk|log}]
 [\-R/\-\-regionsize MirrorLogRegionSize]]
 [\-n/\-\-name LogicalVolumeName]
 [\-p/\-\-permission r/rw] [\-r/\-\-readahead ReadAheadSectors]
@@ -95,11 +95,13 @@ afterwards will be mirrored, but the original contents will not be
 copied.  This is useful for skipping a potentially long and resource
 intensive initial sync.
 
-Specifying the optional argument "--corelog" will create a mirror with
-an in-memory log verses a disk-based (persistent) log.  While this
-removes the need for an extra log device and *may* be slightly faster,
-it requires that the entire mirror be resynchronized upon each
-instantiation (e.g. a reboot).
+The optional argument "--log" gives the ability to specify the type
+of mirror log to be used.  The available types are "disk" and "core",
+where "disk" is the default.  The "disk" log is persistent and requires
+a small amount of storage space - usually on a separate device from the
+mirror legs.  While the "disk" log may cause the mirror to be slightly
+slower during writes, it prevents the need to completely resynchronize
+the mirror upon each instantiation (e.g. a reboot).
 .TP
 .I \-n, \-\-name LogicalVolumeName
 The name for the new logical volume.
@@ -156,6 +158,10 @@ group named vg00. The logical volume name will be chosen by lvcreate.
 with 2 sides with a useable size of 500 MiB.  This operation would
 require 3 devices - two for the mirror devices and one for the disk
 log.
+
+"lvcreate -m1 --log core -L 500M vg00" tries to create a mirror logical volume
+with 2 sides with a useable size of 500 MiB.  This operation would
+require 2 devices - the log is "in-memory".
 
 "lvcreate --size 100m --snapshot --name snap /dev/vg00/lvol1"
 .br
